y.output
Grammar

    0 $accept: command $end

    1 command: exp
    2        | error

    3 exp: exp '+' term
    4    | exp '-' term
    5    | term

    6 term: term '*' factor
    7     | term '/' factor
    8     | factor

    9 factor: NUMBER
   10       | '(' exp ')'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 10
    ')' (41) 10
    '*' (42) 6
    '+' (43) 3
    '-' (45) 4
    '/' (47) 7
    error (256) 2
    NUMBER (258) 9


Nonterminals, with rules where they appear

    $accept (10)
        on left: 0
    command (11)
        on left: 1 2
        on right: 0
    exp (12)
        on left: 3 4 5
        on right: 1 3 4 10
    term (13)
        on left: 6 7 8
        on right: 3 4 5 6 7
    factor (14)
        on left: 9 10
        on right: 6 7 8


State 0

    0 $accept: . command $end

    error   shift, and go to state 1
    NUMBER  shift, and go to state 2
    '('     shift, and go to state 3

    command  go to state 4
    exp      go to state 5
    term     go to state 6
    factor   go to state 7


State 1

    2 command: error .

    $default  reduce using rule 2 (command)


State 2

    9 factor: NUMBER .

    $default  reduce using rule 9 (factor)


State 3

   10 factor: '(' . exp ')'

    NUMBER  shift, and go to state 2
    '('     shift, and go to state 3

    exp     go to state 8
    term    go to state 6
    factor  go to state 7


State 4

    0 $accept: command . $end

    $end  shift, and go to state 9


State 5

    1 command: exp .
    3 exp: exp . '+' term
    4    | exp . '-' term

    '+'  shift, and go to state 10
    '-'  shift, and go to state 11

    $default  reduce using rule 1 (command)


State 6

    5 exp: term .
    6 term: term . '*' factor
    7     | term . '/' factor

    '*'  shift, and go to state 12
    '/'  shift, and go to state 13

    $default  reduce using rule 5 (exp)


State 7

    8 term: factor .

    $default  reduce using rule 8 (term)


State 8

    3 exp: exp . '+' term
    4    | exp . '-' term
   10 factor: '(' exp . ')'

    '+'  shift, and go to state 10
    '-'  shift, and go to state 11
    ')'  shift, and go to state 14


State 9

    0 $accept: command $end .

    $default  accept


State 10

    3 exp: exp '+' . term

    NUMBER  shift, and go to state 2
    '('     shift, and go to state 3

    term    go to state 15
    factor  go to state 7


State 11

    4 exp: exp '-' . term

    NUMBER  shift, and go to state 2
    '('     shift, and go to state 3

    term    go to state 16
    factor  go to state 7


State 12

    6 term: term '*' . factor

    NUMBER  shift, and go to state 2
    '('     shift, and go to state 3

    factor  go to state 17


State 13

    7 term: term '/' . factor

    NUMBER  shift, and go to state 2
    '('     shift, and go to state 3

    factor  go to state 18


State 14

   10 factor: '(' exp ')' .

    $default  reduce using rule 10 (factor)


State 15

    3 exp: exp '+' term .
    6 term: term . '*' factor
    7     | term . '/' factor

    '*'  shift, and go to state 12
    '/'  shift, and go to state 13

    $default  reduce using rule 3 (exp)


State 16

    4 exp: exp '-' term .
    6 term: term . '*' factor
    7     | term . '/' factor

    '*'  shift, and go to state 12
    '/'  shift, and go to state 13

    $default  reduce using rule 4 (exp)


State 17

    6 term: term '*' factor .

    $default  reduce using rule 6 (term)


State 18

    7 term: term '/' factor .

    $default  reduce using rule 7 (term)
